--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bernie.js",
+  "name": "bernie",
   "version": "1.0.2",
   "description": "Easy social sharing buttons",
   "main": "bernie.js",
